--- a/page2.html
+++ b/page2.html
@@ -11,7 +11,7 @@
         <div class="barba-container">
             <div class="page2">
                 <p>Main</p>
-                <p><a href="./page1.html">Go to page 1</a></p>
+                <p><a href="./index.html">Go to page 1</a></p>
             </div>
         </div>
     </div>
